added header with responsive design

--- a/index.html
+++ b/index.html
@@ -6,11 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A112</title>
     <link rel="stylesheet" href="./src/css/base.css">
-    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/index.min.css">
 </head>
 <body>
     <main>
-        
+        <header class="header">
+            <div class="header-wrapper">
+                <div class="header-wrapper__actions">
+                    <div class="header-wrapper__burger">
+                        <span></span>
+                    </div>
+                    <div class="logo-company">
+                        <img src="./src/assets/icons/logo-a112.svg" alt="">
+                    </div>
+                    <ul class="header-wrapper__list">
+                        <li><a href="#">Акции</a></li>
+                        <li><a href="#">Квартиры</a></li>
+                        <li><a href="#">О комплексе</a></li>
+                        <li><a href="#">Ипотека</a></li>
+                        <li><a href="#">Расположение</a></li>
+                        <li><a href="#">Контакты</a></li>
+                    </ul>
+                </div>
+                <div class="header-wrapper__logo">
+                    <img src="./src/assets/icons/logo.svg" alt="">
+                </div>
+            </div>
+        </header>
+
+        <div class="mobile-menu">
+            <nav class="mobile-menu__nav">
+                <ul class="mobile-menu__list">
+                    <li><a href="#">Акции</a></li>
+                    <li><a href="#">Квартиры</a></li>
+                    <li><a href="#">О комплексе</a></li>
+                    <li><a href="#">Ипотека</a></li>
+                    <li><a href="#">Расположение</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </nav>
+        </div>
     </main>
 </body>
 </html>
