added a few blocks

--- a/index.html
+++ b/index.html
@@ -83,6 +83,101 @@
             </div>
         </section>
         <!--  -->
+        <section class="section">
+            <div class="container">
+                <div class="apartments">
+                    <h2>Планировки квартир</h2>
+                    <p>В домах предусмотрены квартиры с индивидуальной планировкой различных типов:</p>
+                    <ul class="apartments-list">
+                        <li class="apartments-list__item">
+                            <div class="apartments-list__item-wrapper">
+                                <div class="apartments-list__img">
+                                    <img src="./src/assets/img/apartment1.svg" alt="">
+                                </div>
+                                <div class="apartments-list__info">
+                                    <div>
+                                        <h3>Двухкомнатные квартиры</h3>
+                                        <p>средняя площадь 69 кв. м</p>
+                                        <span>стандарт</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <a href="#" class="btn btn--dark">Узнать цену</a>                            
+                        </li>
+                        <li class="apartments-list__item">
+                            <div class="apartments-list__item-wrapper">
+                                <div class="apartments-list__img">
+                                    <img src="./src/assets/img/apartment2.svg" alt="">
+                                </div>
+                                <div class="apartments-list__info">
+                                    <div>
+                                        <h3>Трехкомнатные квартиры</h3>
+                                        <p>средняя площадь 65 кв. м</p>
+                                        <span>евростандарт</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <a href="#" class="btn btn--dark">Узнать цену</a>
+                        </li>
+                        <li class="apartments-list__item">
+                            <div class="apartments-list__item-wrapper">
+                                <div class="apartments-list__img">
+                                    <img src="./src/assets/img/apartment3.svg" alt="">
+                                </div>
+                                <div class="apartments-list__info">
+                                    <div>
+                                        <h3>Четырехкомнатные квартиры</h3>
+                                        <p>средняя площадь 91 кв. м</p>
+                                        <span>евростандарт</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <a href="#" class="btn btn--dark">Узнать цену</a>                            
+                        </li>
+                    </ul>
+                    <a href="#" class="btn btn--dark">Оставить заявку</a>
+                </div>
+            </div>
+        </section>
+        <!--  -->
+        <section>
+            <div class="about">
+                <div class="about-info">
+                    <h2>О комплексе</h2>
+                    <p>
+                        ЖК «Золотой час» – это мир в гармонии с природой, уединением и душевным спокойствием. Качественные дома позволят вам окунуться в атмосферу уюта, тепла и безопасности. Концепция проекта предусматривает создание полноценного города в городе, где есть все самое необходимое для комфортной жизни. Постройте свой мир вместе с нами! 
+                        <br><br>
+                        Более подробно о комплексе вы можете ознакомиться <br> на <a href="#">основном сайте</a>
+                    </p>
+                    <div class="about-info__wrapper">
+                        <p>Срок сдачи</p>
+                        <span>II квартал 2025 г.</span>
+                    </div>
+                </div>
+                <div class="about-img">
+                    <img src="./src/assets/img/about-building.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!--  -->
+        <section>
+            <di id="map" class="map">
+                <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/74/yakutsk/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Якутск</a><a href="https://yandex.ru/maps/74/yakutsk/house/prospekt_lenina_57_1/ZUsPaABiSEAHWkJsYWJxcHpqZQg=/?ll=129.721506%2C62.016910&utm_medium=mapframe&utm_source=maps&z=16" style="color:#eee;font-size:12px;position:absolute;top:14px;">Проспект Ленина, 57/1 на карте Якутска — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?ll=129.721506%2C62.016910&mode=whatshere&whatshere%5Bpoint%5D=129.721506%2C62.016910&whatshere%5Bzoom%5D=17&z=16" width="100%" height="100%" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+            </di>
+        </section>
+        <!--  -->
+        <section class="section">
+            <div class="container">
+                <div class="contacts">
+                    <h3>Офис продаж</h3>
+                    <div class="contacts-info">
+                        <div class="contacts-info__wrapper">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
