--- a/index.html
+++ b/index.html
@@ -172,12 +172,78 @@
                     <h3>Офис продаж</h3>
                     <div class="contacts-info">
                         <div class="contacts-info__wrapper">
-                            
+                            <h4>Адрес</h4>
+                            <span>г. Якутск, ул. Аммосова 18, 1 этаж, офис 102</span>
+                            <h4>Телефоны</h4>
+                            <div class="contacts-info__wrapper-phones">
+                                <a href="tel:+74112736302">+7 (4112) 73-63-02</a>
+                                <a href="tel:+74112736300">+7 (4112) 73-63-00</a>
+                            </div>
                         </div>
+                        <div class="contacts-info__wrapper">
+                            <h4>Расписание</h4>
+                            <div class="contacts-info__wrapper-schedule">
+                                <p>Будние дни 9:00 - 18:00</p>
+                                <span>Обед 13:00-14:00</span>
+                                <p>Суббота, Воскресенье - выходной</p>
+                            </div>
+                            <div class="contacts-info__wrapper-mails">
+                                <div>
+                                    <h4>Главный офис</h4>
+                                    <a href="mailto:info@ya112.ru">info@ya112.ru</a>
+                                </div>
+                                <div>
+                                    <h4>Отдел продаж</h4>
+                                    <a href="mailto:sales@ya112.ru">sales@ya112.ru</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contacts-form">
+                        <form action="">
+                            <h5>Получить <br> предложение</h5>
+                            <div class="contacts-form__fields">
+                                <div class="contacts-form__group">
+                                    <input type="name" name="name" placeholder="Введите свое имя и фамилию">
+                                </div>
+                                <div class="contacts-form__group">
+                                    <input type="phone" name="phone" placeholder="Введите свой номер">
+                                </div>
+                                <div class="contacts-form__policy">
+                                    <label class="contacts-form__policy-checkbox">
+                                        <input type="checkbox" id="policyCheckbox">
+                                        <span class="checkmark"></span>
+                                        <span class="text">
+                                            Я согласен(-а) на обработку
+                                            <a href="#" target="_blank">
+                                                персональных данных
+                                            </a>
+                                        </span>
+                                    </label>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn--dark">Отправить</button>
+                        </form>
                     </div>
                 </div>
             </div>
         </section>
+        <!--  -->
+        <footer class="section">
+            <div class="container">
+                <div class="footer">
+                    <p>Вся информация о стоимости, технических характеристиках, наличии, а также специальных предложениях, размещенных на данном сайте, носит исключительно ознакомительный характер, и ни при каких условиях не является публичной офертой, определяемой положениями ст. 437 ГК РФ. Представленные на сайте изображения объектов долевого строительства носят предварительный ознакомительный характер и могут отличаться от фактических проектных решений, реализуемых застройщиком.</p>
+                    <div>
+                        <div>
+                            <span>2024 © Все права защищены</span>
+                            <span>Политика конфиденциальности</span>
+                            <span>Разработка и хостинг Smart Unit</span>
+                        </div>
+                        <a href="#">Ссылка на основной сайт</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
