changed format of images

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="hero-wrapper swiper-wrapper">
                     <div class="hero-wrapper__slider swiper-slide">
                         <div class="hero-wrapper__slider-img">
-                            <img src="./src/assets/img/hero-bg1.png" alt="">
+                            <img src="./src/assets/img/hero-bg1.webp" alt="">
                         </div>
                         <div class="hero-wrapper__slider-info">
                             <strong>Все выгодные предложения от br застройщика с3 “а112”</strong>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="hero-wrapper__slider swiper-slide">
                         <div class="hero-wrapper__slider-img">
-                            <img src="./src/assets/img/hero-bg2.png" alt="">
+                            <img src="./src/assets/img/hero-bg2.webp" alt="">
                         </div>
                         <div class="hero-wrapper__slider-info">
                             <strong>Акция на квартиры: Скидки  от застройщика - 0,7%</strong>
@@ -71,7 +71,7 @@
                     </div>
                     <div class="hero-wrapper__slider swiper-slide">
                         <div class="hero-wrapper__slider-img">
-                            <img src="./src/assets/img/hero-bg3.png" alt="">
+                            <img src="./src/assets/img/hero-bg3.webp" alt="">
                         </div>
                         <div class="hero-wrapper__slider-info">
                             <strong>квартиры в новостройке в жилом комплексе “золотой час” в г.Якутске</strong>
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <div class="about-img">
-                    <img src="./src/assets/img/about-building.png" alt="">
+                    <img src="./src/assets/img/about-building.webp" alt="">
                 </div>
             </div>
         </section>
